.metadata/.plugins/org.eclipse.cdt.ui/Assignment q10.build.log
18:22:57 **** Rebuild of configuration Debug for project Assignment q10 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Assignment q10.o" "..\\src\\Assignment q10.c" 
..\src\Assignment q10.c: In function 'main':
..\src\Assignment q10.c:50:4: error: expected declaration or statement at end of input
    }
    ^

18:22:58 Build Failed. 1 errors, 0 warnings. (took 114ms)

